BACKLOG-5387: Fix group settings title for global groups

--- a/src/main/resources/resources/JahiaSiteSettings_de.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_de.properties
@@ -27,6 +27,7 @@ siteSettings.groups.removeMembers.nothingSelected=Bitte wählen Sie Mitglieder au
 siteSettings.label.backToGroup=Zurück
 siteSettings.label.htmlFiltering=HTML-Filterung
 siteSettings.label.manageGroups=Gruppen
+siteSettings.label.manageGroups.global=Globale Gruppen
 siteSettings.label.manageLanguages=Sprachen
 siteSettings.label.manageModules=Module
 siteSettings.label.modules.type=Typ
