--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -33,6 +33,7 @@ siteSettings.label.language.active.live=Active (Live)
 siteSettings.label.language.default=Default language
 siteSettings.label.language.mandatory=Mandatory
 siteSettings.label.manageGroups=Groups
+siteSettings.label.manageGroups.global=Global groups
 siteSettings.label.manageLanguages=Languages
 siteSettings.label.manageModules=Modules
 siteSettings.label.modules.groupId=Group ID
