--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -33,6 +33,7 @@ siteSettings.label.language.active.live=Active (Live)
 siteSettings.label.language.default=Langue par défaut
 siteSettings.label.language.mandatory=Obligatoire
 siteSettings.label.manageGroups=Groupes
+siteSettings.label.manageGroups.global=Groupes globaux
 siteSettings.label.manageLanguages=Langues
 siteSettings.label.manageModules=Modules
 siteSettings.label.modules.groupId=ID groupe
