QA-6581: validate input file before attempting import.

--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -91,6 +91,7 @@ siteSettings.user.select.one=Please select at least one user.
 siteSettings.users.batch.file.format=File format must include a header line with at minimum the columns j:nodename (username) and j:password. You can include any supported user properties as values. Example:<br/>j:nodename,j:password,j:firstName,j:lastName<br/>steven,steven1234,Steven,ACME
 siteSettings.users.bulk.create=Bulk create users
 siteSettings.users.bulk.delete=Bulk delete Users
+siteSettings.users.bulk.errors.missing.import=You must specify a valid import file.
 siteSettings.users.bulk.errors.missing.mandatory=The uploaded file is missing either <span style="font:bold;">{0}</span> or <span style="font:bold;">{1}</span> mandatory columns
 siteSettings.users.bulk.errors.user.creation.failed=Could not create user <span style="font:bold;">{0}</span>.
 siteSettings.users.bulk.errors.user.skipped=Skipping user <span style="font:bold;">{0}</span> due to username not following the name syntax (only characters (a..z, A..Z, 0..9, _, -, ., @, '{', '}') are valid for the user name).
