--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -95,3 +95,4 @@ siteSettings.users.bulk.errors.user.skipped.password=L'utilisateur <span style="
 siteSettings.users.bulk.remove.switch=Basculer en mode suppression multiple
 siteSettings.users.bulk.user.creation.successful=Utilisateur <span style="font:bold;">{0}</span> créé avec succès
 siteSettings.users.found=<strong>{0}</strong> utilisateurs trouvés. Affichage des <strong>{1}</strong> premiers. Utilisez la recherche pour limiter le nombre de résultats.
+siteSettings.users.bulk.errors.missing.import=Vous devez spécifier un fichier d'import valide.
