QA-7656 : add existence check when creating  user

--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -70,6 +70,7 @@ siteSettings.user.errors.email=Please enter valid e-mail address.
 siteSettings.user.errors.password.mandatory=Please specify a password.
 siteSettings.user.errors.password.not.matching=Password confirmation does not match. Please try again.
 siteSettings.user.errors.username.exist=already exists
+siteSettings.user.errors.username.existOnSite=already exists on site {0}
 siteSettings.user.errors.username.mandatory=Please specify a user name.
 siteSettings.user.errors.username.syntax=only characters (a..z, A..Z, 0..9, _, -, ., @, '{', '}') are valid for the user name.
 siteSettings.user.groupList=Group list
