--- a/src/main/resources/resources/JahiaSiteSettings_fr.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_fr.properties
@@ -70,6 +70,7 @@ siteSettings.user.errors.email=Veuillez entrer une adresse e-mail valide.
 siteSettings.user.errors.password.mandatory=Veuillez spécifier un mot de passe.
 siteSettings.user.errors.password.not.matching=Le mot de passe et le mot de passe de confirmation ne correspondent pas. Veuillez réessayer.
 siteSettings.user.errors.username.exist=existe déjà
+siteSettings.user.errors.username.existOnSite=existe déjà sur le site {0}
 siteSettings.user.errors.username.mandatory=Veuillez spécifier un nom d'utilisateur.
 siteSettings.user.errors.username.syntax=pour le nom de l'utilisateur, seuls les caractères (a..z, A..Z, 0..9, _, -, ., @, '{', '}') sont autorisés.
 siteSettings.user.groupList=Liste des groupes
