--- a/src/main/resources/resources/JahiaSiteSettings_en.properties
+++ b/src/main/resources/resources/JahiaSiteSettings_en.properties
@@ -42,6 +42,10 @@ siteSettings.label.modules.name=Module Name
 siteSettings.label.modules.source=Source
 siteSettings.label.modules.type=Type
 siteSettings.label.modules.version=Version
+siteSettings.label.pageModelsLSettings=Page models dashboard
+siteSettings.label.pageModelsLSettings.pagemodel.name=Model name
+siteSettings.label.pageModelsLSettings.pagename=Page name
+siteSettings.label.pageModelsLSettings.pagepath=Page path
 siteSettings.label.vanityURLSettings=Vanity URL dashboard
 siteSettings.label.wcagCompliance=WCAG compliance
 siteSettings.locale.addLanguages=Add languages
